--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+.red {
+  background-color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 300px;
+}
+
+.blue {
+  background-color: cyan;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.green {
+  background-color: olive;
+  color: orange;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
